--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,28 +1,18 @@
 <div>
   <table style="width:100%" mat-table [dataSource]="data" class="mat-elevation-z8">
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>Nos.</th>
-      <td mat-cell *matCellDef="let element">{{element.position}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef>Weight</th>
-      <td mat-cell *matCellDef="let element">{{element.weight}}</td>
+    <ng-container [matColumnDef]="column" *ngFor="let column of columnDef">
+      <th mat-header-cell *matHeaderCellDef>{{column}}</th>
+      <td mat-cell *matCellDef="let element">{{element[column]}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
-
   </table>
-  <mat-paginator [length]=10 [pageSize]=5 (page)="onPageChange($event)"> </mat-paginator>
+  <mat-paginator [length]=10 [pageSize]=5 (page)="onPageChange($event)">
+  </mat-paginator>
+  <!-- <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-between">
+    <button mat-raised-button>Reset</button>
+    <mat-paginator [length]=10 [pageSize]=5 (page)="onPageChange($event)">
+    </mat-paginator>
+  </div> -->
 </div>
