--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,8 +1,21 @@
-.example-container {
+.container {
     display: flex;
     flex-direction: column;
-  }
-  
-  .example-container > * {
-    width: 100%;
-  }
+}
+ 
+/* .container > * {
+  width: 100%;
+} */
+
+.filter-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.search-container {
+  display: flex;
+  flex:1;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
