--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,15 +1,15 @@
 <div>
-  <table style="width:100%" mat-table [dataSource]="data" class="mat-elevation-z8">
+  <table style="width:100%" mat-table [dataSource]="data" matSort (matSortChange)="onSortChange($event)"
+    class="mat-elevation-z8">
     <ng-container [matColumnDef]="column" *ngFor="let column of columnDef">
-      <th mat-header-cell *matHeaderCellDef>{{column}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>{{column}}</th>
       <td mat-cell *matCellDef="let element">{{element[column]}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
   </table>
-  <mat-paginator [length]=10 [pageSize]=5 (page)="onPageChange($event)">
-  </mat-paginator>
+  <mat-paginator [length]="totalRecords" [pageSize]=5 (page)="onPageChange($event)"> </mat-paginator>
   <!-- <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-between">
     <button mat-raised-button>Reset</button>
     <mat-paginator [length]=10 [pageSize]=5 (page)="onPageChange($event)">
